--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,8 @@
+gradle.properties
+gradlew
+gradlew.bat
+settings.gradle
+
 
 # Created by https://www.gitignore.io/api/osx,java,linux,kotlin,eclipse,windows,android,intellij,androidstudio
 
