all black photos

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        /*
+        maven {
+            url "https://dl.bintray.com/kotlin/kotlin-dev/"
+        }
+        */
     }
 }
 
